Improved store structure of credentials and login attempts. -Improvement: Used a simular structure like UserLogin for UserCredential and UserLoginAttempt -Improvement: Summarized the all db migrations into one. -Improvement: Improved readability of SchulCloudUserManager by removing the unnececary type parameters.

--- a/SchulCloud.Web/SchulCloud.Web/Components/Layouts/PageLayouts/AccountSecurityLayout.razor
+++ b/SchulCloud.Web/SchulCloud.Web/Components/Layouts/PageLayouts/AccountSecurityLayout.razor
@@ -11,7 +11,7 @@
             <MudText Align="Align.Center">@Localizer["tabOverview"]</MudText>
         </MudNavLink>
         
-        @if (UserManager.SupportsUserFido2Credentials && (UserManager.SupportsUserPasskeys || UserManager.SupportsUserTwoFactorSecurityKeys))
+        @if (UserManager.SupportsUserCredentials && (UserManager.SupportsUserPasskeys || UserManager.SupportsUserTwoFactorSecurityKeys))
         {
             <MudNavLink ActiveClass="@ActiveNavLinkClasses" Href="@Routes.SecurityKeys()">
                 <MudText Align="Align.Center">@Localizer["tabSecurityKeys"]</MudText>
