--- a/SchulCloud.Web/SchulCloud.Web/Components/Pages/Account/Security/Index.razor
+++ b/SchulCloud.Web/SchulCloud.Web/Components/Pages/Account/Security/Index.razor
@@ -1,5 +1,6 @@
 ﻿@using Humanizer
 @using Microsoft.AspNetCore.Identity
+@using SchulCloud.Store.Enums
 @using SchulCloud.Web.Extensions
 
 <MudText Typo="Typo.h6">@Localizer["signInMethods"]</MudText>
@@ -15,7 +16,10 @@
                     <MudText Class="ml-2">@Localizer["signIn_Password"]</MudText>
                     <MudSpacer />
 
-                    <MudText Class="mr-2">@Localizer["method_usedLast", DateTime.UtcNow.Humanize()]</MudText>
+                    @if (_latestUseTimes.TryGetValue(LoginAttemptMethod.Password, out DateTime lastTimeUsed))
+                    {
+                        <MudText Class="mr-2">@Localizer["method_usedLast", lastTimeUsed.Humanize()]</MudText>
+                    }
                 </MudStack>
             </TitleContent>
             <ChildContent>
@@ -68,7 +72,10 @@
                     }
                     <MudSpacer />
 
-                    <MudText Class="mr-2">@Localizer["method_usedLast", DateTime.UtcNow.Humanize()]</MudText>
+                    @if (_latestUseTimes.TryGetValue(LoginAttemptMethod.Passkey, out DateTime lastTimeUsed))
+                    {
+                        <MudText Class="mr-2">@Localizer["method_usedLast", lastTimeUsed.Humanize()]</MudText>
+                    }
                 </MudStack>
             </TitleContent>
             <ChildContent>
@@ -121,7 +128,10 @@
                         }
                         <MudSpacer />
 
-                        <MudText Class="mr-2">@Localizer["method_usedLast", DateTime.UtcNow.Humanize()]</MudText>
+                        @if (_latestUseTimes.TryGetValue(LoginAttemptMethod.TwoFactorAuthenticator, out DateTime lastTimeUsed))
+                        {
+                            <MudText Class="mr-2">@Localizer["method_usedLast", lastTimeUsed.Humanize()]</MudText>
+                        }
                     </MudStack>
                 </TitleContent>
                 <ChildContent>
@@ -158,7 +168,10 @@
                         }
                         <MudSpacer />
 
-                        <MudText Class="mr-2">@Localizer["method_usedLast", DateTime.UtcNow.Humanize()]</MudText>
+                        @if (_latestUseTimes.TryGetValue(LoginAttemptMethod.TwoFactorEmail, out DateTime lastTimeUsed))
+                        {
+                            <MudText Class="mr-2">@Localizer["method_usedLast", lastTimeUsed.Humanize()]</MudText>
+                        }
                     </MudStack>
                 </TitleContent>
                 <ChildContent>
@@ -197,7 +210,10 @@
                         }
                         <MudSpacer />
 
-                        <MudText Class="mr-2">@Localizer["method_usedLast", DateTime.UtcNow.Humanize()]</MudText>
+                        @if (_latestUseTimes.TryGetValue(LoginAttemptMethod.TwoFactorSecurityKey, out DateTime lastTimeUsed))
+                        {
+                            <MudText Class="mr-2">@Localizer["method_usedLast", lastTimeUsed.Humanize()]</MudText>
+                        }
                     </MudStack>
                 </TitleContent>
                 <ChildContent>
@@ -246,7 +262,10 @@
                         }
                         <MudSpacer />
 
-                        <MudText Class="mr-2">@Localizer["method_usedLast", DateTime.UtcNow.Humanize()]</MudText>
+                        @if (_latestUseTimes.TryGetValue(LoginAttemptMethod.TwoFactorRecoveryCode, out DateTime lastTimeUsed))
+                        {
+                            <MudText Class="mr-2">@Localizer["method_usedLast", lastTimeUsed.Humanize()]</MudText>
+                        }
                     </MudStack>
                 </TitleContent>
                 <ChildContent>
