General improvements -Improvement: Rename some pages for clarification. -Style: Improved the style of some pages. -Fix: Fixed file names in Main.ts from last commit.

--- a/SchulCloud.Web/SchulCloud.Web/Components/Layouts/AnonymousLayout.razor
+++ b/SchulCloud.Web/SchulCloud.Web/Components/Layouts/AnonymousLayout.razor
@@ -19,7 +19,7 @@
         }
         <MudText Class="mr-10" Typo="Typo.h5">@PresentationOptionsAccessor.Value.ApplicationName</MudText>
 
-        <MudButton Href="@Routes.SignIn()">
+        <MudButton Href="@Routes.Login()">
             <MudIcon Class="d-inline me-2" Icon="@MaterialSymbols.Outlined.Login" />
             @Localizer["signInLink"]
         </MudButton>
