--- a/SchulCloud.Web/SchulCloud.Web/Components/Pages/Account/Security/ChangePassword.razor
+++ b/SchulCloud.Web/SchulCloud.Web/Components/Pages/Account/Security/ChangePassword.razor
@@ -1,4 +1,4 @@
-﻿<SchulCloudPageTitle Title="@Localizer["title"]" />
+﻿<AppPageTitle Title="@Localizer["title"]" />
 
 <MudPaper Class="py-3 px-3">
     <EditForm Model="_model" OnValidSubmit="Form_OnValidSubmitAsync">
@@ -16,6 +16,6 @@
                        Class="mb-5" RequiredError="@Localizer["form_NotEmpty"]" Required autocomplete="new-password" />
 
         <MudButton Color="Color.Primary" ButtonType="ButtonType.Submit" Variant="Variant.Filled">@Localizer["submitBtn"]</MudButton>
-        <MudButton Href="@Routes.SecurityIndex()">@Localizer["cancelBtn"]</MudButton>
+        <MudButton Href="@Routes.SecurityOverview()">@Localizer["cancelBtn"]</MudButton>
     </EditForm>
 </MudPaper>
