--- a/SchulCloud.Web/SchulCloud.Web/Components/Pages/Account/Security/TwoFactor/Authenticator.razor
+++ b/SchulCloud.Web/SchulCloud.Web/Components/Pages/Account/Security/TwoFactor/Authenticator.razor
@@ -1,4 +1,4 @@
-﻿<SchulCloudPageTitle Title="@Localizer["title"]" />
+﻿<AppPageTitle Title="@Localizer["title"]" />
 
 <MudPaper Class="px-3 py-3">
     <MudText Typo="Typo.h6" Align="Align.Center">@Localizer["title"]</MudText>
