--- a/SchulCloud.Web/SchulCloud.Web/Components/Pages/Auth/ConfirmEmail.razor
+++ b/SchulCloud.Web/SchulCloud.Web/Components/Pages/Auth/ConfirmEmail.razor
@@ -1,4 +1,4 @@
-﻿<SchulCloudPageTitle Title="@Localizer["title"]" />
+﻿<AppPageTitle Title="@Localizer["title"]" />
 
 <MudPaper Class="mt-15 px-3 py-3">
     <MudText>@Localizer["confirmText"]</MudText>
