--- a/SchulCloud.Web/SchulCloud.Web/Components/Pages/Auth/Verify2fa.razor
+++ b/SchulCloud.Web/SchulCloud.Web/Components/Pages/Auth/Verify2fa.razor
@@ -1,6 +1,6 @@
 ﻿@using SchulCloud.Web.Enums
 
-<SchulCloudPageTitle Title="@Localizer["title"]" />
+<AppPageTitle Title="@Localizer["title"]" />
 
 <MudPaper Class="mt-15 px-3 py-3">
     <MudText Typo="Typo.h4" Align="Align.Center">@Localizer["title"]</MudText>
