--- a/SchulCloud.Web/SchulCloud.Web/Components/Pages/Auth/Login.razor
+++ b/SchulCloud.Web/SchulCloud.Web/Components/Pages/Auth/Login.razor
@@ -1,6 +1,6 @@
 ﻿@using SchulCloud.Web.Extensions
 
-<SchulCloudPageTitle Title="@Localizer["title"]" />
+<AppPageTitle Title="@Localizer["title"]" />
 
 <MudPaper Class="mt-15 px-3 py-3">
     <MudText Class="mb-5" Typo="Typo.h4" Align="Align.Center">@Localizer["header"]</MudText>
