Added button to forget 2fa client -Feature: Added a button in the security overview to forget this 2fa client.

--- a/SchulCloud.Web/SchulCloud.Web/Components/Pages/Account/Security/SecurityOverview.razor
+++ b/SchulCloud.Web/SchulCloud.Web/Components/Pages/Account/Security/SecurityOverview.razor
@@ -297,5 +297,10 @@
                 </MudExpansionPanel>
             }
         </MudExpansionPanels>
+
+        <MudText Class="mt-4" Typo="Typo.body1">@Localizer["mfaForgetClient_Desc"]</MudText>
+        <MudButton Color="Color.Error" OnClick="@(() => NavigationManager.NavigateToSecurityOverview(forget2faClient: true, forceLoad: true))">
+            @Localizer["mfaForgetClient"]
+        </MudButton>
     }
 </MudPaper>
