--- a/SchulCloud.Web/SchulCloud.Web/Components/App.razor
+++ b/SchulCloud.Web/SchulCloud.Web/Components/App.razor
@@ -15,7 +15,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
     <link href="/_static/_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
     <link href="/_static/_content/MudBlazor.FontIcons.MaterialSymbols/css/font.min.css" rel="stylesheet" />
-    <link href="/_static/css/SchulCloud.Web.bundle.scp.css" rel="stylesheet" />
+    <link href="/_static/dist/css/AppBundle.styles.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -28,7 +28,7 @@
     <script src="/_framework/blazor.web.js"></script>
     <script src="/_static/_content/MudBlazor/MudBlazor.min.js"></script>
     <script src="/_static/_content/BlazorGoogleMaps/js/objectManager.js"></script>
-    <script src="/_static/dist/schulcloud.web.min.js"></script>
+    <script src="/_static/dist/js/Main.min.js"></script>
 </body>
 
 </html>
